public enum Tipo {
    LIKE
}
